--- a/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -1,5 +1,5 @@
 
-\documentclass{ieee}
+\documentclass[onecolumn,12pt]{ieee}
 
 %------------------------------------------------------------------------- 
 % 
@@ -36,6 +36,8 @@
 %------------------------------------------------------------------------- 
 
 \input x10graphdesign
+\input runtime
+
 \bibliographystyle{ieee}
 \bibliography{IPDPS08_X10WS}
 
