draft of the write-up on the runtime section.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4499 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -1,5 +1,5 @@
 
-\documentclass{ieee}
+\documentclass[onecolumn,12pt]{ieee}
 
 %------------------------------------------------------------------------- 
 % 
@@ -36,6 +36,8 @@
 %------------------------------------------------------------------------- 
 
 \input x10graphdesign
+\input runtime
+
 \bibliographystyle{ieee}
 \bibliography{IPDPS08_X10WS}
 
