minor changes. added Dekker reference
git-svn-id: svn://svn.code.sf.net/p/x10/code@4503 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.bib
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.bib
@@ -6,3 +6,11 @@
   url = "{http://x10.sf.net}",
 } 
 
+@article{dekker,
+  author = "E.W. Dijkstra",
+  title = "Cooperating Sequential Processes",
+  year = "1968",
+  pages = "43--112",
+  journal = "(Techniche Hogeschool, Eindhoven, 1965). Reprinted in: F. Genuys (ed.), Programming Languages", 
+  publisher = "Academic Press",
+}
