--- a/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
@@ -2,13 +2,18 @@
 \section{Designing Parallel Graph Algorithms in X10}
 \label{s:design}
 
- Invariably algorithms are designed, although sometimes implicitly, with an abstract algorithmic model. Programming languages play an important role in the translation of an algorithm to an executable program on the target system. When there is a large gap between model and architecture, programming languages and efficient runtime support can be immensely helpful in achieving high performance with relatively ease of programming. 
+ Invariably algorithms are designed, although sometimes implicitly, with an abstract algorithmic model. 
+%%Programming languages play an important role in the translation of an algorithm to an executable program on the target system. 
+When there is a large gap between model and architecture, programming languages and efficient runtime support can be immensely helpful in achieving high performance with relatively ease of programming. 
 
- Large scale graph problems with irregular instances are challenging to solve on current and emerging parallel systems \cite{BC07}. Despite the large existing body of theoretically-fast PRAM algorithms and communication-optimal BSP algorithms, there are few implementations that achieve good parallel performance. With the PRAM model, synchronous processors are available in an unlimited amount, and accesses to memory locations are of uniform distance. PRAM is highly idealistic and conducive to exploring the inherent parallelism of a problem. For practical purposes, PRAM does not reflect features of main-stream architectures that are critical to performance. Significant effort is necessary to produce efficient implementations on even shared-memory systems, for example, SMPs. Few PRAM algorithms have been adapted to the distributed-memory environment with significant overhaul of major steps. More practical models such as BSP and LogP, on the other hand, parameterize communication, synchronization, and even memory access costs. As a result, algorithms may be mapped onto real machines with reasonable ease and performance, yet design choices are severely limited as the dimension of fine-grained parallelism is virtually excluded from the design. Designing and implementing parallel graph algorithms for large, irregular inputs on either class of models is challenging. 
+ Large scale graph problems with irregular instances are challenging to solve on current and emerging parallel systems \cite{BC07}. Despite the large existing body of theoretically-fast PRAM algorithms and communication-optimal BSP algorithms, there are few implementations that achieve good parallel performance.
+%% With the PRAM model, synchronous processors are available in an unlimited amount, and accesses to memory locations are of uniform distance. 
+PRAM is highly idealistic and conducive to exploring the inherent parallelism of a problem. For practical purposes, PRAM does not reflect features of main-stream architectures that are critical to performance. Significant effort is necessary to produce efficient implementations on even shared-memory systems, for example, SMPs. Few PRAM algorithms have been adapted to the distributed-memory environment with significant overhaul of major algorithm steps. More practical models such as BSP and LogP, on the other hand, parameterize communication, synchronization, and even memory access costs. As a result, algorithms may be mapped onto real machines with reasonable ease and performance, yet design choices are severely limited as the dimension of fine-grained parallelism is virtually excluded. After decades of effort, designing and implementing parallel graph algorithms for large, irregular inputs on either class of models remains challenging. 
 
- One of the biggest challenges of efficiently simulating a PRAM algorithm on modern architectures is load balancing. Load-balancing is not an issue with PRAM as there are always enough processors. Consider a graph algorithm for sparse, irregular instances with adjacency list as the input. A PRAM algorithm may assign for each edge (in this case each neighbor $v$ in the adjacency list of vertex $u$) a processor, and takes $O(n)$ processors. When simulating on $p$ ($p\ll n$) processors, $\frac{n}{p}$ vertices are usually assigned to one processor. As the graph is irregular with potentially huge difference among the number of neighbors for each processor, load-imbalance causes serious performance problems. Keeping track of workload distribution becomes even more cumbersome when the algorithms compact the input graphs. The challenge with popular distributed-memory models such as BSP and LogP is graph partitioning. For irregular instances there is no known practical algorithm that partitions a graph evenly.  
+ One of the biggest challenges of efficiently simulating a PRAM algorithm on modern architectures is load balancing. Load-balancing is not an issue with PRAM as there are always enough processors. Consider a graph algorithm for sparse, irregular instances with adjacency list as the input. A PRAM algorithm may assign for each edge (in this case each neighbor $v$ in the adjacency list of vertex $u$) a processor, and takes $O(n)$ processors. When simulating on $p$ ($p\ll n$) processors, $\frac{n}{p}$ vertices are usually assigned to one processor. As the graph is irregular with potentially huge difference among the number of neighbors for each processor, load-imbalance constitutes a serious performance problem. Keeping track of workload distribution becomes even more cumbersome when the algorithms compact the input graphs. The load-balancing challenge with popular distributed-memory models such as BSP and LogP is that no known practical technique exists that partitions a graph evenly.  
 
- X10 provides a programming model that allows for expression of data and task parallelism,  and at the same time good efficiency guarantee. With expressive programming constructs and efficient runtime support, X10 greatly reduces for a programmer the gap between algorithm and target systems. The programming model enables an algorithm designer to focus on expressing the appropriate parallelism of a problem, and leaves to the runtime system mapping and scheduling activities on to the processors. Of course X10 also provides the mechanism for an algorithm to take advantage of architecture features, for example, memory affinity, that impact performance. X10 makes a big step in solving large-scale, irregular graph problems on current supercomputers.
+% X10 provides a programming model that allows for expression of data and task parallelism,  and at the same time good efficiency guarantee. With expressive programming constructs and efficient runtime support, X10 greatly reduces for a programmer the gap between algorithm and target systems.
+The programming model of X10 enables an algorithm designer to focus on expressing the appropriate parallelism, and leaves to the runtime system mapping and scheduling activities on to the processors in a load-balanced fashion. X10 makes a big step in terms of productivity and performance in solving large-scale, irregular graph problems on current supercomputers.
 
 %%  X10 is designed for applications that run on a cluster of SMPs. First note that similar to PGAS languages, a global virtual space is provided and this is critical in solving sparse, irregular graph instances as no graph partitioning techniques are available. Also X10 provides a notion of affinity that helps. X10 also provides various task constructs that is critical in expressing various kinds of parallelism. 
 
